add an image icon to the manifest

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
     <title>Codenames Green</title>
 
 </head>
